--- a/index.html
+++ b/index.html
@@ -18,51 +18,9 @@
 		</script>
 		<script type="text/javascript" src="C:/Users/Admin/Desktop/Insight/basicslider.js"></script>
 		
-	<style>
-		
-		#gallery {
-			  width: 1100px;
-			  overflow: hidden;
-			  position: relative;
-			  z-index: 1;
-			  margin: 10px auto;
-			  border: 2px solid #003C72;
-			}
-			#navigation1 {
-			  list-style: none;
-			  padding: 0;
-			  margin: 0;
-			  float: left;
-			  height:500px; 
-			  width: 35%;
-			  overflow:hidden; 
-			  overflow-y:scroll;
-			}
-			#navigation2 {
-			  list-style: none;
-			  padding: 0;
-			  margin: 0;
-			  display: inline;
-			}
-			#navigation li {
-			  padding: 0;
-			  margin: 0;
-			  float: left;
-			  clear: both;
-			}
-			#navigation li a img {
-			  display: block;
-			  border: none;
-			}
-			#navigation li a {
-			  display: block;
-			}
-			#full-picture {
-			  height: 500px;
-			  overflow: hidden;
-			  float: left;
-			}
+	<style>	
 	</style>
+	
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -98,21 +56,6 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#"> <b>Khan Academy Thailand คานอะคาเดมี่ประเทศไทย</b> สื่อการเรียนรู้ระดับโลก ฟรีสำหรับทุกคนทุกหนแห่งในรูปแบบภาษาไทย </a>
-            </div>
-            
-          </div>
-        </nav>
 		
 		<nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -177,11 +120,12 @@
       </ol-->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="img-responsive center-block" src="home.jpg" alt="First slide" height="200">
+          <img class="img-responsive center-block" src="bg-blue.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>คานอะคาเดมี่ภาคภาษาไทย</h1>
-              <p> สื่อการเรียนรู้ระดับโลก ฟรีสำหรับทุกคนทุกหนแห่งในรูปแบบภาษาไทย </p>
+              <h1>Khan Academy Thailand</h1>
+			  <h2>คานอะคาเดมี่ภาคภาษาไทย</h2>
+              <h4> สื่อการเรียนรู้ระดับโลก ฟรีสำหรับทุกคนทุกหนแห่งในรูปแบบภาษาไทย </h4>
             </div>
           </div>
         </div>
@@ -218,111 +162,129 @@
 	  
 	  <div class="panel panel-default" id="Math by subject">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>คณิตศาสตร์ตามวิชา</center></div>
+	  <div class="panel-heading"><center><font size="4">คณิตศาสตร์ตามวิชา</font></center></div>
 	  <!--div class="panel-body">
 		<p><b>คณิตปฐมวัย</b>  </p>
 		<p><b>คณิตปฐมวัย</b>  </p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
-		  * <a href="ChildPage_example.html"> คณิตปฐมวัย</a>  *	เลขคณิต *	ก่อนพีชคณิต  *	เรขาคณิตพื้นฐาน  *	พีชคณิตพื้นฐาน  *	พีชคณิต I *	เรขาคณิต   *	พีชคณิต II
+		  <font size="3.5">
+		  <a href="ChildPage_example.html"> คณิตปฐมวัย</a>  *	เลขคณิต *	ก่อนพีชคณิต  *	เรขาคณิตพื้นฐาน  *	พีชคณิตพื้นฐาน  *	พีชคณิต I *	เรขาคณิต   *	พีชคณิต II
 		*	ตรีโกณมิติ     *	ความน่าจะเป็นและสถิติ     *	พรีแคลคูลัส   *	แคลคูลัสเชิงอนุพันธ์     *	แคลคูลัสเชิงปริพันธ์    *	แคลคูลัสหลายตัวแปร    *	พีชคณิตเชิงเส้น
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Math by grade">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>คณิตศาสตร์ตามระดับชั้น</center></div>
+	  <div class="panel-heading"><center><font size="4">คณิตศาสตร์ตามระดับชั้น</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		*	อนุบาล (อเมริกา)   * เกรด 1 (อเมริกา)  * เกรด 2 (อเมริกา) * เกรด 5 (อเมริกา)  *	เกรด 8 (อเมริกา)   *	เกรด 7 (NCERT)
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Science">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>วิทยาศาสตร์</center></div>
+	  <div class="panel-heading"><center><font size="4">วิทยาศาสตร์</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		*	ฟิสิกส์ *	เคมี *	เคมีอินทรีย์ *	ชีววิทยา *	จักรวาลวิทยาและดาราศาสตร์ *	สุขภาพและการแพทย์
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Computing">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>คอมพิวเตอร์</center></div>
+	  <div class="panel-heading"><center><font size="4">คอมพิวเตอร์</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		*	การเขียนโปรแกรมคอมพิวเตอร์ *	วิทยาการคอมพิวเตอร์
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Art & Humanities">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>ศิลปะและมนุษยศาสตร์</center></div>
+	  <div class="panel-heading"><center><font size="4">ศิลปะและมนุษยศาสตร์</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		*	ประวัติศาสตร์ศิลปะพื้นฐาน * ไวยากรณ์
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Economics and finance">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>เศรษฐศาสตร์และการเงิน</center></div>
+	  <div class="panel-heading"><center><font size="4">เศรษฐศาสตร์และการเงิน</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		*	เศรษฐศาสตร์จุลภาค  *	ไฟแนนซ์และตลาดทุน
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Test prep">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>เตรียมสอบ</center></div>
+	  <div class="panel-heading"><center><font size="4">เตรียมสอบ</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		*	SAT *	MCAT
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "Partner">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>หน่วยงานที่ร่วมมือ</center></div>
+	  <div class="panel-heading"><center><font size="4">หน่วยงานที่ร่วมมือ<font size="4"></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		โรงเรียนแพทย์สแตนฟอร์ด * 23andMe
+		</font>
 	  </table>
 	</div>
 	
 	<div class="panel panel-default" id = "(No domain)">
 	  <!-- Default panel contents -->
-	  <div class="panel-heading"><center>(ไม่มีโดเมน)</center></div>
+	  <div class="panel-heading"><center><font size="4">(ไม่มีโดเมน)</font></center></div>
 	  <!--div class="panel-body">
 		<p>...</p>
 	  </div-->
 	  <!-- Table -->
 	  <table class="table">
+	  <font size="3.5">
 		แหล่งข้อมูลสำหรับโค้ช *	แหล่งข้อมูล
+		</font>
 	  </table>
 	</div>
 	
@@ -351,7 +313,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-11">
+        <div class="col-md-12">
           <h2 class="featurette-heading" id="AboutUs">เกี่ยวกับเรา</span></h2>
           <p class="lead">คานอะคาเดมี่ภาคภาษาไทย เป็นเว็บไซต์เผยแพร่สื่อการศึกษาจาก <a href="https://www.khanacademy.org/">คานอะคาเดมี่ (Khan Academy)</a> ให้สอดคล้องกับหลักสูตรการเรียนการสอนของประเทศไทย 
 		  ตั้งแต่ระดับชั้นประถมศึกษาถึงปริญญาตรี และบุคคลทั่วไป เพื่อให้นักเรียน นักศึกษา และครูสามารถนำไปใช้ในห้องเรียนได้ง่าย 
