change size header

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </ol-->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="img-responsive center-block" src="bg-blue.jpg" alt="First slide">
+          <img class="img-responsive center-block" src="bg-blue.jpg" alt="First slide" height ="200">
           <div class="container">
             <div class="carousel-caption">
               <h1>Khan Academy Thailand</h1>
