--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img alt="Brand" src="KhanAcademyLogo.jpg" height="30"></a>
+      <!--a class="navbar-brand" href="#"><img alt="Brand" src="KhanAcademyLogo.jpg" height="30"></a-->
+	  <a class="navbar-brand" href="#">Khan Academy Thailand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -123,8 +124,8 @@
           <img class="img-responsive center-block" src="bg-blue.jpg" alt="First slide" height ="200">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Khan Academy Thailand</h1>
-			  <h2>คานอะคาเดมี่ภาคภาษาไทย</h2>
+              <h1>คานอะคาเดมี่ภาคภาษาไทย</h1>
+			  <!--h2>คานอะคาเดมี่ภาคภาษาไทย</h2-->
               <h4> สื่อการเรียนรู้ระดับโลก ฟรีสำหรับทุกคนทุกหนแห่งในรูปแบบภาษาไทย </h4>
             </div>
           </div>
