navbar block fixed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<script type="text/javascript" src="C:/Users/Admin/Desktop/Insight/basicslider.js"></script>
 		
 	<style>	
+	#body { 
+    padding-top: 65px; 
+	}
 	</style>
 	
 	<meta charset="utf-8">
