--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
 		<script type="text/javascript" src="C:/Users/Admin/Desktop/Insight/basicslider.js"></script>
 		
 	<style>	
-	#body { 
-    padding-top: 65px; 
-	}
+			body {
+		  padding-top: 60px;
+		}
+		@media (max-width: 979px) {
+		  body {
+			padding-top: 0px;
+		  }
+		}
 	</style>
 	
 	<meta charset="utf-8">
