--- a/index.html
+++ b/index.html
@@ -19,14 +19,7 @@
 		<script type="text/javascript" src="C:/Users/Admin/Desktop/Insight/basicslider.js"></script>
 		
 	<style>	
-			body {
-		  padding-top: 60px;
-		}
-		@media (max-width: 979px) {
-		  body {
-			padding-top: 0px;
-		  }
-		}
+			
 	</style>
 	
 	<meta charset="utf-8">
@@ -65,7 +58,7 @@
     <div class="navbar-wrapper">
       <div class="container">
 		
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
