--- a/index.html
+++ b/index.html
@@ -93,9 +93,18 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
+      <form class="navbar-form navbar-left" method="GET" action="http://www.google.com/search">
+	  <!--form method="GET" action="http://www.google.com/search">
+			<input type="text" name="q" size="31" maxlength="255" />
+			<input type="submit" name="btnG" VALUE="Search" />
+			<input type="hidden" name="domains" value="https://tponsukcharoen.github.io/KhanAcademyThailand/index.html" />
+			<input type="hidden" name="sitesearch" value="https://tponsukcharoen.github.io/KhanAcademyThailand/index.html" />
+		</form-->
+		
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="หัวข้อ...">
+          <input type="text" name="q" class="form-control" placeholder="หัวข้อ...">
+		  <input type="hidden" name="domains" value="https://tponsukcharoen.github.io/KhanAcademyThailand/index.html" />
+		  <input type="hidden" name="sitesearch" value="https://tponsukcharoen.github.io/KhanAcademyThailand/index.html" />
         </div>
         <button type="submit" class="btn btn-default">ค้นหา</button>
       </form>
