--- a/0_8.html
+++ b/0_8.html
@@ -68,7 +68,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html#"><img alt="Brand" src="KhanAcademyLogo.jpg" height="30"></a>
+      <!--a class="navbar-brand" href="#"><img alt="Brand" src="KhanAcademyLogo.jpg" height="30"></a-->
+	  <a class="navbar-brand" href="#">Khan Academy Thailand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
