--- a/0_6.html
+++ b/0_6.html
@@ -69,7 +69,7 @@
         <span class="icon-bar"></span>
       </button>
       <!--a class="navbar-brand" href="#"><img alt="Brand" src="KhanAcademyLogo.jpg" height="30"></a-->
-	  <a class="navbar-brand" href="#">Khan Academy Thailand</a>
+	  <a class="navbar-brand" href="https://tponsukcharoen.github.io/KhanAcademyThailand/index.html#">Khan Academy Thailand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
