add new subjects

--- a/0_14.html
+++ b/0_14.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามวิชา > พีชคณิตเชิงเส้น</h2>
+                  <h2>คณิตศาสตร์ตามวิชา > สมการเชิงอนุพันธ์</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">เวกเตอร์และสเปซ</div>
+                      <div class="panel-heading">สมการเชิงอนุพันธ์อันดับหนึ่ง</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การคูณเวกตอร์แบบดอตและแบบครอส</b></td><td>การคูณเวกเตอร์แบบดอตกับความยาวเวกเตอร์</td><td>| <a href="https://www.youtube.com/watch?v=WNuIhXo39_k">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การพิสูจน์สมบัติของการคูณเวกเตอร์แบบดอต</td><td>| <a href="https://www.youtube.com/watch?v=rVQ3G9epCjw">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>บทพิสูจน์อสมการโคชี-ชวอส</td><td>| <a href="https://www.youtube.com/watch?v=r2PogGDl8_U">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>อสมการสามเหลี่ยมของเวกเตอร์</td><td>| <a href="https://www.youtube.com/watch?v=PsNidCBr5II">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การนิยามมุมระหว่างเวกเตอร์</td><td>| <a href="https://www.youtube.com/watch?v=5AWob_z74Ks">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การนิยามระนาบใน R3 ด้วยจุดกับเวกเตอร์ตั้งฉาก</td><td>| <a href="https://www.youtube.com/watch?v=UJxgcVaNTqY">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การคูณแบบครอสเบื้องต้น</td><td>| <a href="https://www.youtube.com/watch?v=QGvk8awHams">คลิปพากย์ภาษาไทย</a> | </td></tr><tr><td></td><td>พิสูจน์: ความสัมพันธ์ระหว่างการคูณแบบครอสกับไซน์ของมุม</td><td>| <a href="https://www.youtube.com/watch?v=7MKA2QlKvHc">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การคูณแบบดอตและครอส การเปรียบเทียบ และสัญชาตญาณ</td><td>| <a href="https://www.youtube.com/watch?v=tdwFdzVqito">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การกระจายการคูณเวกเตอร์สามตัว (เลือกดูได้ตามใจ)</td><td>| <a href="https://www.youtube.com/watch?v=b7JTVLc_aMk">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>เวกเตอร์ตั้งฉากจากสมการระนาบ</td><td>| <a href="https://www.youtube.com/watch?v=gw-4wltP5tY">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ระยะจากจุดถึงระนาบ</td><td>| <a href="https://www.youtube.com/watch?v=7rIFO8hct9g">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ระยะระหว่างระนาบ</td><td>| <a href="https://www.youtube.com/watch?v=v8plb6V8BQo">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>สมการเชิงอนุพันธ์เบื้องต้น</b></td><td>สมการเชิงอนุพันธ์เบื้องต้น</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=6o7b9yyhH7k">ที่นี่</a> | </td></tr><tr><td></td><td>ตัวอย่างพร้อมเฉลย - ผลเฉลยเชิงเส้นของสมการเชิงอนุพันธ์</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=zid7J4EhZN8">ที่นี่</a> | </td></tr><tr><td></td><td>การเขียนสมการเชิงอนุพันธ์</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=H9h-Xg7zjPU">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 
