--- a/1_3.html
+++ b/1_3.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 5 (อเมริกา)</h2>
+                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 3</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">การดำเนินการเลขคณิต</div>
+                      <div class="panel-heading">การบวกและการลบ</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การบวกทศนิยม</b></td><td>การบวกทศนิยม : 9.087+15.31</td><td>| <a href="https://www.youtube.com/watch?v=oLh_sIESQnY">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกทศนิยม : 0.822+5.65</td><td>| <a href="https://www.youtube.com/watch?v=ErHFQUhZ94I">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกทศนิยมสามตัว </td><td>| <a href="https://www.youtube.com/watch?v=9s3vJpczHdo">คลิปพากย์ภาษาไทย</a> | </td></tr>
+                      <tr><td><b>แผนการบวกเลขสองหลักและสามหลัก</b></td><td>การแตกปัญหาการบวกเลข 3 หลัก</td><td>| <a href="https://www.youtube.com/watch?v=Hc9mcx739js">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกโดยใช้กลุ่มละ 10 กับ 100</td><td>| <a href="https://www.youtube.com/watch?v=Nq88IHw4Y9E">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกลบบนเส้นจำนวน 2</td><td>| <a href="https://www.youtube.com/watch?v=WevZMyikGV4">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
                       </table>
                     </div>
                 
