--- a/1_8.html
+++ b/1_8.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 4</h2>
+                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 8</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">การบวกและการลบ</div>
+                      <div class="panel-heading">สมการและฟังก์ชันเชิงเส้น</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การบวกเลขหลายหลัก</b></td><td>การบวกเลข 3 หลัก</td><td>| <a href="https://www.youtube.com/watch?v=Wm0zq-NqEFs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=O9zSHs1TWMM">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกเลข 3 หลักที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=9hM32lsQ4aI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>ผลเฉลยของสมการเชิงเส้น</b></td><td>ระนาบพิกัดเบื้องต้น</td><td>| <a href="https://www.youtube.com/watch?v=N4nrdf0yYfM">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>จุดบนระนาบพิกัด ตัวอย่าง</td><td>| <a href="https://www.youtube.com/watch?v=VhNkWdLGpmA">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การทดสอบผลเฉลยของสมการเชิงเส้น</td><td>| <a href="https://www.youtube.com/watch?v=WU9g4CvZyR0">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การวาดกราฟสมการเชิงเส้น: 5x+2y=20</td><td>| <a href="https://www.youtube.com/watch?v=86NwKBcOlow">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การวาดกราฟสมการเชิงเส้น: y=2x+7</td><td>| <a href="https://www.youtube.com/watch?v=tDAZamJ2mkM">คลิปพากย์ภาษาไทย</a> | </td></tr>
                       </table>
                     </div>
                 
