--- a/5_1.html
+++ b/5_1.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>เศรษฐศาสตร์และการเงิน > ไฟแนนซ์และตลาดทุน</h2>
+                  <h2>เศรษฐศาสตร์และการเงิน > เศรษฐศาสตร์มหภาค</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">บัญชีและรายงานการเงิน</div>
+                      <div class="panel-heading">GDP - การวัดรายได้ระดับชาติ</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>บัญชีเกณฑ์เงินสดกับเกณฑ์คงค้าง</b></td><td>เกณฑ์บัญชีเงินสด</td><td>| <a href="https://www.youtube.com/watch?v=FfdpupKByiU">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>เศรษฐศาสตร์เบื้องต้น</b></td><td>เศรษฐศาสตร์เบื้องต้น</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=8JYP_wU1JTU">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 
