--- a/6_2.html
+++ b/6_2.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 4</h2>
+                  <h2>เตรียมสอบ > GMAT</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">การบวกและการลบ</div>
+                      <div class="panel-heading">การแก้ปัญหา</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การบวกเลขหลายหลัก</b></td><td>การบวกเลข 3 หลัก</td><td>| <a href="https://www.youtube.com/watch?v=Wm0zq-NqEFs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=O9zSHs1TWMM">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกเลข 3 หลักที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=9hM32lsQ4aI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>การแก้ปัญหา</b></td><td>GMAT: Math 1</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=jciijU8Mj_Y">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 
