--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 			<tr><td><a href="0_0.html"> คณิตปฐมวัย</a></td>	<td><a href="0_1.html"> เลขคณิต</a></td> <td><a href="0_2.html"> ก่อนพีชคณิต</a></td><td><a href="0_3.html"> เรขาคณิตพื้นฐาน</a></td></tr>
 			<tr><td><a href="0_4.html">  พีชคณิตพื้นฐาน</a></td>	<td><a href="0_5.html">พีชคณิต I</a></td> <td><a href="0_6.html"> เรขาคณิต</a></td><td><a href="0_7.html"> พีชคณิต II</a></td></tr>
 			<tr><td><a href="0_8.html">ตรีโกณมิติ </a></td>	<td><a href="0_9.html"> ความน่าจะเป็นและสถิติ </a></td> <td><a href="0_10.html"> พรีแคลคูลัส</a></td><td><a href="0_11.html">แคลคูลัสเชิงอนุพันธ์</a></td></tr>
-			<tr><td><a href="0_12.html">แคลคูลัสเชิงปริพันธ์ </a></td><td><a href="0_13.html"> แคลคูลัสหลายตัวแปร</a></td> <td><a href="0_14.html"> พีชคณิตเชิงเส้น</a></td><td> </td></tr>
+			<tr><td><a href="0_12.html">แคลคูลัสเชิงปริพันธ์ </a></td><td><a href="0_13.html"> แคลคูลัสหลายตัวแปร</a></td> <td><a href="0_14.html">สมการเชิงอนุพันธ์</a></td><td><a href="0_15.html"> พีชคณิตเชิงเส้น</a></td></tr>
+			<tr><td><a href="0_16.html"> คณิตคิดสนุก </a></td>	<td></td> <td> </td> <td> </td></tr>	
 	  </table>
 	  </font>
 	</div>
@@ -185,8 +186,9 @@
 	  <div class="panel-heading"><center><font size="4">คณิตศาสตร์ตามระดับชั้น</font></center></div>
 	  <font size="3.5">
 	  <table class="table">
-		<tr><td><a href="1_0.html"> อนุบาล (อเมริกา)</a></td>	<td><a href="1_1.html"> เกรด 1 (อเมริกา) </a></td> <td><a href="1_2.html"> เกรด 2 (อเมริกา) </a></td><td><a href="1_3.html"> เกรด 5 (อเมริกา) </a></td></tr>
-		<tr><td><a href="1_4.html"> เกรด 8 (อเมริกา) </a></td>	<td><a href="1_5.html"> เกรด 7 (NCERT) </a></td> <td> </td> <td> </td></tr>	
+		<tr><td><a href="1_0.html"> อนุบาล </a></td>	<td><a href="1_1.html"> เกรด 1</a></td> <td><a href="1_2.html"> เกรด 2</a></td><td><a href="1_3.html"> เกรด 3 </a></td></tr>
+		<tr><td><a href="1_4.html"> เกรด 4</a></td>	<td><a href="1_5.html"> เกรด 5 </a></td> <td><a href="1_6.html"> เกรด 6 </a></td><td><a href="1_7.html"> เกรด 7</a></td></tr>	
+		<tr><td><a href="1_8.html"> เกรด 8 </a></td>	<td><a href="1_9.html"> เกรด 7 (NCERT) </a></td> <td> </td> <td> </td></tr>	
 	  </table></font>
 	</div>
 	
@@ -196,7 +198,7 @@
 	  <!-- Table --><font size="3.5">
 	  <table class="table">
 		<tr><td><a href="2_0.html"> ฟิสิกส์</a></td>	<td><a href="2_1.html"> เคมี </a></td> <td><a href="2_2.html"> เคมีอินทรีย์ </a></td><td><a href="2_3.html"> ชีววิทยา </a></td></tr>
-		<tr><td><a href="2_4.html"> จักรวาลและดาราศาสตร์ </a></td>	<td><a href="2_5.html"> สุขภาพและการแพทย์ </a></td> <td> </td> <td> </td> </tr>	
+		<tr><td><a href="2_4.html"> จักรวาลและดาราศาสตร์ </a></td>	<td><a href="2_5.html"> สุขภาพและการแพทย์ </a></td> <td><a href="2_6.html"> วิศวกรรมไฟฟ้า </a> </td> <td> </td> </tr>	
 	  </table></font>
 	</div>
 	
@@ -214,7 +216,7 @@
 	  <div class="panel-heading"><center><font size="4">ศิลปะและมนุษยศาสตร์</font></center></div>
 	  <!-- Table --><font size="3.5">
 	  <table class="table">
-	  <tr><td><a href="4_0.html"> ประวัติศาสตร์ศิลปะพื้นฐาน </a></td>	<td><a href="4_1.html"> ไวยากรณ์</a></td><td></td><td></td></tr>	
+	  <tr><td><a href="4_0.html"> ประวัติศาสตร์โลก </a></td>	<td><a href="4_1.html"> ประวัติศาสตร์อเมริกัน</a></td><td><a href="4_2.html"> ประวัติศาสตร์ศิลปะ </a></td> <td><a href="4_3.html"> ไวยากรณ์ </a></td></tr>	
 	  </table>
 	  </font>
 	</div>
@@ -224,7 +226,7 @@
 	  <div class="panel-heading"><center><font size="4">เศรษฐศาสตร์และการเงิน</font></center></div>
 	  <!-- Table --><font size="3.5">
 	  <table class="table">
-	  <tr><td><a href="5_0.html"> เศรษฐศาสตร์จุลภาค   </a></td>	<td><a href="5_1.html"> ไฟแนนซ์และตลาดทุน</a></td><td> </td><td> </td></tr>	
+	  <tr><td><a href="5_0.html"> เศรษฐศาสตร์จุลภาค   </a></td>	<td><a href="5_1.html"> เศรษฐศาสตร์มหภาค</a></td><td><a href="5_2.html"> ไฟแนนซ์และตลาดทุน</a></td><td><a href="5_3.html"> การเป็นผู้ประกอบการ</a></td></tr>	
 	  </table></font>
 	</div>
 	
@@ -233,7 +235,8 @@
 	  <div class="panel-heading"><center><font size="4">เตรียมสอบ</font></center></div>
 	  <!-- Table --><font size="3.5">
 	  <table class="table">
-	  <tr><td><a href="6_0.html"> SAT</a></td><td><a href="6_1.html"> MCAT</a></td><td> </td><td> </td></tr>	
+	  <tr><td><a href="6_0.html"> SAT</a></td><td><a href="6_1.html"> MCAT</a></td><td><a href="6_2.html"> GMAT</a></td><td><a href="6_3.html">IIT JEE</a></td></tr>	
+	  <tr><td><a href="6_4.html"> NCLEX-RN</a></td><td></td><td> </td><td> </td></tr>
 	  </table>
 	  </font>
 	</div>
@@ -243,7 +246,7 @@
 	  <div class="panel-heading"><center><font size="4">หน่วยงานที่ร่วมมือ</font></center></div>
 	  <!-- Table --><font size="3.5">
 	  <table class="table">
-	  <tr><td><a href="7_0.html"> โรงเรียนแพทย์สแตนฟอร์ด </a></td><td><a href="7_1.html">23andMe</a></td> <td> </td> <td> </td></tr>	
+	  <tr><td><a href="7_0.html"> โรงเรียนแพทย์สแตนฟอร์ด </a></td><td><a href="7_1.html">23andMe</a></td> <td><a href="7_2.html">Pixar in a box</a> </td> <td> </td></tr>	
 	  </table>
 	  </font>
 	</div>
