--- a/1_0.html
+++ b/1_0.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามระดับชั้น > อนุบาล (อเมริกา)</h2>
+                  <h2>คณิตศาสตร์ตามระดับชั้น > อนุบาล</h2>
                 </div><!-- /.col-lg-4 -->
 
 
