--- a/2_6.html
+++ b/2_6.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 4</h2>
+                  <h2>วิทยาศาสตร์ > วิศวกรรมไฟฟ้า</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">การบวกและการลบ</div>
+                      <div class="panel-heading">วิศวกรรมไฟฟ้าเบื้องต้น</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การบวกเลขหลายหลัก</b></td><td>การบวกเลข 3 หลัก</td><td>| <a href="https://www.youtube.com/watch?v=Wm0zq-NqEFs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=O9zSHs1TWMM">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกเลข 3 หลักที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=9hM32lsQ4aI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>เริ่มต้น</b></td><td>กระแส</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=ZRLXDiiUv8Q">ที่นี่</a> | </td></tr><tr><td></td><td>ทิศของกระแส</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=4frpZ4Q0q58">ที่นี่</a> | </td></tr><tr><td></td><td>โวลเตจ</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=k9SwNST1eW0">ที่นี่</a> | </td></tr><tr><td></td><td>กระแสตามธรรมเนียม</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=17EhKw2tsu4">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 
