--- a/4_2.html
+++ b/4_2.html
@@ -118,7 +118,7 @@
                 <!-- Three columns of text below the carousel -->
               <div class="row">
                 <div class="col-lg-11">
-                  <h2>คณิตศาสตร์ตามระดับชั้น > เกรด 4</h2>
+                  <h2>ศิลปะและมนุษยศาสตร์ > ประวัติศาสตร์ศิลปะ</h2>
                 </div><!-- /.col-lg-4 -->
 
 
@@ -126,10 +126,10 @@
               
                 <div class="panel panel-info">
                       <!-- Default panel contents -->
-                      <div class="panel-heading">การบวกและการลบ</div>
+                      <div class="panel-heading">ประวัติศาสตร์ศิลปะพื้นฐาน</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การบวกเลขหลายหลัก</b></td><td>การบวกเลข 3 หลัก</td><td>| <a href="https://www.youtube.com/watch?v=Wm0zq-NqEFs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=O9zSHs1TWMM">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การบวกเลข 3 หลักที่มีการจับกลุ่มใหม่</td><td>| <a href="https://www.youtube.com/watch?v=9hM32lsQ4aI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>ก่อนอื่น</b></td><td>ดูงานศิลปะทำไม?</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=0OloYD_kSbU">ที่นี่</a> | </td></tr><tr><td></td><td>การวิเคราะห์ประวัติศาสตร์ศิลปะ (ภาพวาด) บทนำพื้นฐานโดยใช้ Third of May, 1808 ของโกยา</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=_QM-DfhrNv8">ที่นี่</a> | </td></tr><tr><td></td><td>ประวัติย่นย่อของศาสนาในศิลปะ</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=qfITRYcnP84">ที่นี่</a> | </td></tr><tr><td></td><td>Art กับ craft แตกต่างกันไหม?</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=tVdw60eCnJI">ที่นี่</a> | </td></tr><tr><td></td><td>ศิลปะช่วยคุณวิเคราะห์ได้อย่างไร</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=ubEadhXWwV4">ที่นี่</a> | </td></tr><tr><td><b>เครื่องมือเพื่อเข้าใจศิลปะ</b></td><td>foreshortening คืออะไร?</td><td>| <a href="https://www.youtube.com/watch?v=_enw8gnHNX4">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>chiaroscuro คืออะไร?</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=LrUznhnVd2s">ที่นี่</a> | </td></tr><tr><td></td><td>contrapposto คืออะไร?</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=1iTC9cBk6Ac">ที่นี่</a> | </td></tr><tr><td></td><td>มุมมองเชิงเส้นหนึ่งจุดทำงานอย่างไร</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=eOksHhQ8TLM">ที่นี่</a> | </td></tr><tr><td></td><td>ลำดับคลาสสิค</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=nrRJkzXl4a4">ที่นี่</a> | </td></tr><tr><td></td><td>ศิลปะช่วยคุณวิเคราะห์ได้อย่างไร</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=ubEadhXWwV4">ที่นี่</a> | </td></tr><tr><td></td><td>การวิเคราะห์ประวัติศาสตร์ศิลปะ (ภาพวาด) บทนำพื้นฐานโดยใช้ Third of May, 1808 ของโกยา</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=_QM-DfhrNv8">ที่นี่</a> | </td></tr><tr><td></td><td>ประวัติย่นย่อของการแสดงร่างกายในงานปั้นตะวันตก</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=4eNX_xFt-sU">ที่นี่</a> | </td></tr><tr><td></td><td>ประวัติย่นย่อของการแสดงร่างกายในภาพวาดตะวันตก</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=0WxPx3_ZSBI">ที่นี่</a> | </td></tr><tr><td></td><td>การดูภาพวาด</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=jm8Sva2hnvY">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 
