--- a/3_0.html
+++ b/3_0.html
@@ -235,7 +235,7 @@
                       <div class="panel-heading">JS ขั้นสูง - การจำลองธรรมชาติ</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>การจำลองธรรมชาติเบื้องต้น</b></td><td>ยินดีต้อนรับสู่การจำลองธรรมชาติ</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=LMfPceMzLWg">ที่นี่</a> | </td></tr>
+                      <tr><td><b>การจำลองธรรมชาติเบื้องต้น</b></td><td>ยินดีต้อนรับสู่การจำลองธรรมชาติ</td><td>| <a href="https://www.youtube.com/watch?v=LMfPceMzLWg">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
                       </table>
                     </div>
                 </div>
