--- a/7_2.html
+++ b/7_2.html
@@ -158,6 +158,27 @@
                 </div>
                 </div>
                 
+            <div class="card">
+    <div class="card-header" role="tab" id="heading_7_2_1">
+      <h5 class="mb-0">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse_7_2_1" aria-expanded="true" aria-controls="collapse_7_2_1"><h3>กล้องเสมือน</h3>
+        </a>
+      </h5>
+    </div>
+    <div id="collapse_7_2_1" class="collapse" role="tabpanel" aria-labelledby="heading_7_2_1">
+      <div class="card-block">
+                <div class="panel panel-info">
+                      <!-- Default panel contents -->
+                      <div class="panel-heading">กล้องเสมือน</div>
+                      <!-- Table -->
+                      <table class="table">
+                      <tr><td><b>กล้องเสมือนทำงานอย่างไร</b></td><td>กล้องเสมือนเบื้องต้น</td><td>| <a href="https://www.youtube.com/watch?v=LswXfRF-o70">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>กล้องรูเข็มคืออะไร?</td><td>| <a href="https://www.youtube.com/watch?v=jhBC39xZVnw">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ระยะโฟกัส</td><td>| <a href="https://www.youtube.com/watch?v=c6zHJhvEeHI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>เลนส์กล้อง</td><td>| <a href="https://www.youtube.com/watch?v=Q5Jat06VM6o">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>Depth of field</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=di9lFutR_QQ">ที่นี่</a> | </td></tr><tr><td></td><td>การเล่าเรื่องด้วยกล้อง</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=i8qDk9gzGg8">ที่นี่</a> | </td></tr><tr><td></td><td>รู้จัก Eben Ostby</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=zGFVHPJwkLE">ที่นี่</a> | </td></tr><tr><td><b>คณิตศาสตร์ของ depth of field</b></td><td>คณิตศาสตร์ของกล้องรูเข็ม</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=Ed44liATsIs">ที่นี่</a> | </td></tr><tr><td></td><td>การประมาณเลนส์บาง</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=oolZEgQict0">ที่นี่</a> | </td></tr><tr><td></td><td>กฎเลนส์อย่างง่าย</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=6enELX1OKXs">ที่นี่</a> | </td></tr><tr><td></td><td>วัตถุนอกโฟกัส</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=-DEaFgE8CDA">ที่นี่</a> | </td></tr><tr><td></td><td>พีชคณิตของโฟกัส</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=bygYRFBXmfA">ที่นี่</a> | </td></tr>
+                      </table>
+                    </div>
+                </div>
+                </div>
+                </div>
+                
       </div>
       <!-- FOOTER -->
       <footer>
