--- a/0_14.html
+++ b/0_14.html
@@ -151,7 +151,7 @@
                       <div class="panel-heading">สมการเชิงอนุพันธ์อันดับหนึ่ง</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>สมการเชิงอนุพันธ์เบื้องต้น</b></td><td>สมการเชิงอนุพันธ์เบื้องต้น</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=6o7b9yyhH7k">ที่นี่</a> | </td></tr><tr><td></td><td>ตัวอย่างพร้อมเฉลย - ผลเฉลยเชิงเส้นของสมการเชิงอนุพันธ์</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=zid7J4EhZN8">ที่นี่</a> | </td></tr><tr><td></td><td>การเขียนสมการเชิงอนุพันธ์</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=H9h-Xg7zjPU">ที่นี่</a> | </td></tr>
+                      <tr><td><b>สมการเชิงอนุพันธ์เบื้องต้น</b></td><td>สมการเชิงอนุพันธ์เบื้องต้น</td><td>| <a href="https://www.youtube.com/watch?v=6o7b9yyhH7k">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ตัวอย่างพร้อมเฉลย - ผลเฉลยเชิงเส้นของสมการเชิงอนุพันธ์</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=zid7J4EhZN8">ที่นี่</a> | </td></tr><tr><td></td><td>การเขียนสมการเชิงอนุพันธ์</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=H9h-Xg7zjPU">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 </div>
