--- a/7_2.html
+++ b/7_2.html
@@ -172,7 +172,28 @@
                       <div class="panel-heading">กล้องเสมือน</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>กล้องเสมือนทำงานอย่างไร</b></td><td>กล้องเสมือนเบื้องต้น</td><td>| <a href="https://www.youtube.com/watch?v=LswXfRF-o70">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>กล้องรูเข็มคืออะไร?</td><td>| <a href="https://www.youtube.com/watch?v=jhBC39xZVnw">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ระยะโฟกัส</td><td>| <a href="https://www.youtube.com/watch?v=c6zHJhvEeHI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>เลนส์กล้อง</td><td>| <a href="https://www.youtube.com/watch?v=Q5Jat06VM6o">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ความชัดลึก</td><td>| <a href="https://www.youtube.com/watch?v=di9lFutR_QQ">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การเล่าเรื่องด้วยกล้อง</td><td>| <a href="https://www.youtube.com/watch?v=i8qDk9gzGg8">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>รู้จัก Eben Ostby</td><td>| <a href="https://www.youtube.com/watch?v=zGFVHPJwkLE">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td><b>คณิตศาสตร์ของความชัดลึก</b></td><td>คณิตศาสตร์ของกล้องรูเข็ม</td><td>| <a href="https://www.youtube.com/watch?v=Ed44liATsIs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การประมาณเลนส์บาง</td><td>| <a href="https://www.youtube.com/watch?v=oolZEgQict0">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>กฎเลนส์อย่างง่าย</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=6enELX1OKXs">ที่นี่</a> | </td></tr><tr><td></td><td>วัตถุนอกโฟกัส</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=-DEaFgE8CDA">ที่นี่</a> | </td></tr><tr><td></td><td>พีชคณิตของโฟกัส</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=bygYRFBXmfA">ที่นี่</a> | </td></tr>
+                      <tr><td><b>กล้องเสมือนทำงานอย่างไร</b></td><td>กล้องเสมือนเบื้องต้น</td><td>| <a href="https://www.youtube.com/watch?v=LswXfRF-o70">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>กล้องรูเข็มคืออะไร?</td><td>| <a href="https://www.youtube.com/watch?v=jhBC39xZVnw">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ระยะโฟกัส</td><td>| <a href="https://www.youtube.com/watch?v=c6zHJhvEeHI">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>เลนส์กล้อง</td><td>| <a href="https://www.youtube.com/watch?v=Q5Jat06VM6o">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>ความชัดลึก</td><td>| <a href="https://www.youtube.com/watch?v=di9lFutR_QQ">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การเล่าเรื่องด้วยกล้อง</td><td>| <a href="https://www.youtube.com/watch?v=i8qDk9gzGg8">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>รู้จัก Eben Ostby</td><td>| <a href="https://www.youtube.com/watch?v=zGFVHPJwkLE">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td><b>คณิตศาสตร์ของความชัดลึก</b></td><td>คณิตศาสตร์ของกล้องรูเข็ม</td><td>| <a href="https://www.youtube.com/watch?v=Ed44liATsIs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การประมาณเลนส์บาง</td><td>| <a href="https://www.youtube.com/watch?v=oolZEgQict0">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>กฎเลนส์อย่างง่าย</td><td>| <a href="https://www.youtube.com/watch?v=6enELX1OKXs">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>วัตถุนอกโฟกัส</td><td>| <a href="https://www.youtube.com/watch?v=-DEaFgE8CDA">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>พีชคณิตของโฟกัส</td><td>| <a href="https://www.youtube.com/watch?v=bygYRFBXmfA">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      </table>
+                    </div>
+                </div>
+                </div>
+                </div>
+                
+            <div class="card">
+    <div class="card-header" role="tab" id="heading_7_2_2">
+      <h5 class="mb-0">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse_7_2_2" aria-expanded="true" aria-controls="collapse_7_2_2"><h3>อนิเมชั่น</h3>
+        </a>
+      </h5>
+    </div>
+    <div id="collapse_7_2_2" class="collapse" role="tabpanel" aria-labelledby="heading_7_2_2">
+      <div class="card-block">
+                <div class="panel panel-info">
+                      <!-- Default panel contents -->
+                      <div class="panel-heading">อนิเมชั่น</div>
+                      <!-- Table -->
+                      <table class="table">
+                      <tr><td><b>อนิเมชั่นเบื้องต้น</b></td><td>คณิตศาสตร์พบศิลปะ</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=zaNUFmhD5PM">ที่นี่</a> | </td></tr><tr><td></td><td>1. Straight ahead animation</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=zMQhuo3QYIg">ที่นี่</a> | </td></tr><tr><td></td><td>2. Linear interpolation</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=KxM05gLQ654">ที่นี่</a> | </td></tr><tr><td></td><td>3. Bezier curves</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=G7sxV2G-OEo">ที่นี่</a> | </td></tr><tr><td></td><td>4. Squash and stretch</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=L_lCAaTKIRE">ที่นี่</a> | </td></tr><tr><td></td><td>รู้จัก Rob Jensen</td><td>| ยังไม่มีซับไตเติ้ลภาษาไทย ช่วยแปลได้ <a href="https://www.youtube.com/timedtext_video?v=Wtxec3V4WKQ">ที่นี่</a> | </td></tr>
                       </table>
                     </div>
                 </div>
