--- a/1_1.html
+++ b/1_1.html
@@ -193,7 +193,7 @@
                       <div class="panel-heading">การวัดและข้อมูล</div>
                       <!-- Table -->
                       <table class="table">
-                      <tr><td><b>ความยาวและขนาด</b></td><td>การเรียงลำดับตามความยาว</td><td>| <a href="https://www.youtube.com/watch?v=SQmyTmO8OKw">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การวัดความยาว - รูปปั้นทอง</td><td>| <a href="https://www.youtube.com/watch?v=pdleRJd9YNY">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td><b>กราฟแท่ง</b></td><td>การอ่านกราฟแท่ง - กระดูกหมา</td><td>| <a href="https://www.youtube.com/watch?v=OmLl6pkvV-I">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td><b>เวลา</b></td><td>การบอกเวลา (นาฬิกามีเลขกำกับ)</td><td>| <a href="https://www.youtube.com/watch?v=NjJFJ7ge_qk">คลิปพร้อมซับไตเติ้ล</a> | </td></tr>
+                      <tr><td><b>ความยาวและขนาด</b></td><td>การเรียงลำดับตามความยาว</td><td>| <a href="https://www.youtube.com/watch?v=SQmyTmO8OKw">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td></td><td>การวัดความยาว - รูปปั้นทอง</td><td>| <a href="https://www.youtube.com/watch?v=pdleRJd9YNY">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td><b>กราฟแท่ง</b></td><td>การอ่านกราฟแท่ง - กระดูกหมา</td><td>| <a href="https://www.youtube.com/watch?v=OmLl6pkvV-I">คลิปพร้อมซับไตเติ้ล</a> | </td></tr><tr><td><b>เวลา</b></td><td>การบอกเวลา (นาฬิกามีเลขกำกับ)</td><td>| <a href="https://www.youtube.com/watch?v=NjJFJ7ge_qk">คลิปพร้อมซับไตเติ้ล</a> | <a href="https://www.youtube.com/watch?v=9QEzQF_rx9w">คลิปพากย์ภาษาไทย</a> | </td></tr>
                       </table>
                     </div>
                 </div>
